--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
 		<!-- Nav -->
 			<nav id="nav">
 				<ul>
-					<li><a href="#top">Top</a></li>
-					<li><a href="#work">Work</a></li>
-					<li><a href="#portfolio">Portfolio</a></li>
-					<li><a href="#contact">Contact</a></li>
+					<li><a href="#top">Inicio</a></li>
+					<li><a href="#work">Trabajos</a></li>
+					<li><a href="#contact">Contacto</a></li>
 				</ul>
 			</nav>
 
@@ -40,14 +39,14 @@
 				<article class="container" id="top">
 					<div class="row">
 						<div class="4u">
-							<span class="me image image-full"><img src="images/me.jpg" alt="" /></span>
+							<span class="me image image-full" style="box-shadow: 0 0 10px 10px #555;"><img src="images/bee.png" alt="" /></span>
 						</div>
 						<div class="8u">
 							<header>
-								<h1>Hi. I'm <strong>Jane Doe</strong>.</h1>
+								<h1><strong>tombatossals</strong></h1>
 							</header>
-							<p>And this is <strong>Miniport</strong>, a free, fully responsive HTML5 site template designed by <a href="http://n33.co/">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license/">CCA license</a>.</p>
-							<a href="#work" class="button button-big">Learn about what I do</a>
+							<p style="margin-bottom: 1em;">Esta página recopila parte del trabajo realizado cuando tengo algo de tiempo libre, siempre relacionado con temáticas de tecnología, conocimiento abierto, telecomunicaciones y otras inquietudes.</p>
+							<a href="#work" class="button button-big">Últimas publicaciones</a>
 						</div>
 					</div>
 				</article>
@@ -57,47 +56,8 @@
 			<div class="wrapper wrapper-style2">
 				<article id="work">
 					<header>
-						<h2>I design and build amazing things.</h2>
-						<span>Odio turpis amet sed consequat eget posuere consequat.</span>
-					</header>
-					<div class="container">
-						<div class="row">
-							<div class="4u">
-								<section class="box box-style1">
-									<span class="icon featured-icon icon-comments-alt"></span>
-									<h3>Consequat lorem</h3>
-									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-								</section>
-							</div>
-							<div class="4u">
-								<section class="box box-style1">
-									<span class="icon featured-icon icon-file-alt"></span>
-									<h3>Lorem dolor tempus</h3>
-									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-								</section>
-							</div>
-							<div class="4u">
-								<section class="box box-style1">
-									<span class="icon featured-icon icon-thumbs-up"></span>
-									<h3>Feugiat posuere</h3>
-									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-								</section>
-							</div>
-						</div>
-					</div>
-					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#portfolio" class="button button-big">See some of my recent work</a>
-					</footer>
-				</article>
-			</div>
-
-		<!-- Portfolio -->
-			<div class="wrapper wrapper-style3">
-				<article id="portfolio">
-					<header>
-						<h2>Awesome work makes happy clients.</h2>
-						<span>Proin odio consequat  sapien vestibulum ipsum primis sed amet consequat lorem dolore feugiat lorem ipsum dolore.</span>
+						<h2>Trabajos, proyectos, artículos publicados.</h2>
+						<span>Temas relacionados con las redes, el software libre, la integración de sistemas, o la tecnología en general.</span>
 					</header>
 					<div class="container">
 						<div class="row">
@@ -107,54 +67,30 @@
 						<div class="row">
 							<div class="4u">
 								<article class="box box-style2">
-									<a href="http://flypixel.com/generic-smartphone/8949517882265310" class="image image-full"><img src="images/portfolio01.jpg" alt="" /></a>
-									<h3><a href="http://flypixel.com/generic-smartphone/8949517882265310">Magna feugiat</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
+									<a href="https://github.com/tombatossals/luci-app-vpnc" class="image image-full"><img src="images/luci-app-vpnc.png" alt="" /></a>
+									<h3><a href="https://github.com/tombatossals/luci-app-vpnc">luci-app-vpnc</a></h3>
+									<p>Módulo para el interfaz web LuCI de <strong>OpenWRT</strong> que nos permite configurar y arrancar <strong>vpnc</strong> en nuestro enrutador.</p>
+									<p><small>27-Mayo-2013</small></p>
 								</article>
 							</div>
 							<div class="4u">
 								<article class="box box-style2">
-									<a href="http://flypixel.com/n33" class="image image-full"><img src="images/portfolio02.jpg" alt="" /></a>
-									<h3><a href="http://flypixel.com/n33">Veroeros primis</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
+									<a href="http://wip.micronautas.com/openwrt-vpnc/" class="image image-full"><img src="images/openwrt-vpnc.png" alt="" /></a>
+									<h3><a href="http://wip.micronautas.com/openwrt-vpnc/">OpenWRT + VPNC</a></h3>
+									<p>Cómo configurar nuestro router con <strong>OpenWRT</strong> para que arranque automáticamente un túnel Cisco IPSEC (vpnc).</p>
+									<p><small>27-Mayo-2013</small></p>
 								</article>
 							</div>
 							<div class="4u">
 								<article class="box box-style2">
-									<a href="http://flypixel.com/wood-ui-kit/3574765984616310" class="image image-full"><img src="images/portfolio03.jpg" alt="" /></a>
-									<h3><a href="http://flypixel.com/wood-ui-kit/3574765984616310">Lorem ipsum</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
-								</article>
-							</div>
-						</div>
-						<div class="row">
-							<div class="4u">
-								<article class="box box-style2">
-									<a href="http://flypixel.com/n33-pattern-set-1/3522389001865317" class="image image-full"><img src="images/portfolio04.jpg" alt="" /></a>
-									<h3><a href="http://flypixel.com/n33-pattern-set-1/3522389001865317">Tempus dolore</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
-								</article>
-							</div>
-							<div class="4u">
-								<article class="box box-style2">
-									<a href="http://flypixel.com/cityscape/9803996277226316" class="image image-full"><img src="images/portfolio05.jpg" alt="" /></a>
-									<h3><a href="http://flypixel.com/cityscape/9803996277226316">Feugiat aliquam</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
-								</article>
-							</div>
-							<div class="4u">
-								<article class="box box-style2">
-									<a href="http://flypixel.com/n33" class="image image-full"><img src="images/portfolio06.jpg" alt="" /></a>
-									<h3><a href="http://flypixel.com/n33">Sed amet ornare</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
+									<a href="http://wip.micronautas.com/instalar-openwrt/" class="image image-full"><img src="images/instalar-openwrt.png" alt="" /></a>
+									<h3><a href="http://wip.micronautas.com/instalar-openwrt/">Instalar OpenWRT</a></h3>
+									<p>Primeros pasos para instalar en nuestro router la distribución orientada a equipos de telecomunicaciones <strong>OpenWRT</strong>.</p>
+									<p><small>27-Mayo-2013</small></p>
 								</article>
 							</div>
 						</div>
 					</div>
-					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#contact" class="button button-big">Get in touch with me</a>
-					</footer>
 				</article>
 			</div>
 
@@ -162,76 +98,19 @@
 			<div class="wrapper wrapper-style4">
 				<article id="contact">
 					<header>
-						<h2>Want to hire me? Get in touch!</h2>
-						<span>Ornare nulla proin odio consequat  sapien vestibulum ipsum sed lorem.</span>
+						<h3>Me encontrarás en ...</h3>
+						<ul class="social">
+							<li class="github"><a href="http://github.com/tombatossals" class="icon icon-github"><span>Github</span></a></li>
+							<li class="googleplus"><a href="https://plus.google.com/100184619238119414805/posts" class="icon icon-google-plus"><span>Google+</span></a></li>
+							<li class="twitter"><a href="http://twitter.com/tombatossals" class="icon icon-twitter"><span>Twitter</span></a></li>
+						</ul>
 					</header>
-					<div>
-						<div class="row">
-							<div class="12u">
-								<form method="post" action="#">
-									<div>
-										<div class="row">
-											<div class="6u">
-												<input type="text" name="name" id="name" placeholder="Name" />
-											</div>
-											<div class="6u">
-												<input type="text" name="email" id="email" placeholder="Email" />
-											</div>
-										</div>
-										<div class="row">
-											<div class="12u">
-												<input type="text" name="subject" id="subject" placeholder="Subject" />
-											</div>
-										</div>
-										<div class="row">
-											<div class="12u">
-												<textarea name="message" id="message" placeholder="Message"></textarea>
-											</div>
-										</div>
-										<div class="row">
-											<div class="12u">
-												<a href="#" class="button form-button-submit">Send Message</a>
-												<a href="#" class="button button-alt form-button-reset">Clear Form</a>
-											</div>
-										</div>
-									</div>
-								</form>
-							</div>
-						</div>
-						<div class="row row-special">
-							<div class="12u">
-								<h3>Find me on ...</h3>
-								<ul class="social">
-									<li class="twitter"><a href="http://twitter.com/n33co" class="icon icon-twitter"><span>Twitter</span></a></li>
-									<li class="facebook"><a href="#" class="icon icon-facebook"><span>Facebook</span></a></li>
-									<li class="dribbble"><a href="http://dribbble.com/n33" class="icon icon-dribbble"><span>Dribbble</span></a></li>
-									<li class="linkedin"><a href="#" class="icon icon-linkedin"><span>LinkedIn</span></a></li>
-									<li class="tumblr"><a href="#" class="icon icon-tumblr"><span>Tumblr</span></a></li>
-									<li class="googleplus"><a href="#" class="icon icon-google-plus"><span>Google+</span></a></li>
-									<li class="github"><a href="http://github.com/n33" class="icon icon-github"><span>Github</span></a></li>
-									<!--
-									<li class="rss"><a href="#" class="icon icon-rss"><span>RSS</span></a></li>
-									<li class="instagram"><a href="#" class="icon icon-instagram"><span>Instagram</span></a></li>
-									<li class="foursquare"><a href="#" class="icon icon-foursquare"><span>Foursquare</span></a></li>
-									<li class="skype"><a href="#" class="icon icon-skype"><span>Skype</span></a></li>
-									<li class="soundcloud"><a href="#" class="icon icon-soundcloud"><span>Soundcloud</span></a></li>
-									<li class="youtube"><a href="#" class="icon icon-youtube"><span>YouTube</span></a></li>
-									<li class="blogger"><a href="#" class="icon icon-blogger"><span>Blogger</span></a></li>
-									<li class="flickr"><a href="#" class="icon icon-flickr"><span>Flickr</span></a></li>
-									<li class="vimeo"><a href="#" class="icon icon-vimeo"><span>Vimeo</span></a></li>
-									-->
-								</ul>
-							</div>
-						</div>
-					</div>
 					<footer>
 						<p id="copyright">
-							&copy; 2012 Untitled | Images: <a href="http://fotogrph.com">fotogrph</a> | Design: <a href="http://html5up.net/">HTML5 UP</a>
+							&copy; 2013 <a href="https://plus.google.com/100184619238119414805/posts">+ David Rubert</a> | IsNow Team: <a href="http://isnow.org">IsNow</a> | Design: <a href="http://html5up.net/miniport">HTML5 UP Miniport</a>
 						</p>
 					</footer>
 				</article>
 			</div>
-
-
 	</body>
 </html>
