--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<header>
 								<h1><strong>tombatossals</strong></h1>
 							</header>
-							<p style="margin-bottom: 1em;">Esta página recopila parte del trabajo realizado cuando tengo algo de tiempo libre, siempre relacionado con temáticas de tecnología, conocimiento abierto, telecomunicaciones y otras inquietudes.</p>
+							<p style="margin-bottom: 1em;">Esta página recopila parte del trabajo realizado cuando tengo algo de tiempo libre, siempre relacionado con temáticas de tecnología, conocimiento abierto o telecomunicaciones.</p>
 							<a href="#work" class="button button-big">Últimas publicaciones</a>
 						</div>
 					</div>
@@ -69,7 +69,7 @@
 								<article class="box box-style2">
 									<a href="https://github.com/tombatossals/luci-app-vpnc" class="image image-full"><img src="images/luci-app-vpnc.png" alt="" /></a>
 									<h3><a href="https://github.com/tombatossals/luci-app-vpnc">luci-app-vpnc</a></h3>
-									<p>Módulo para el interfaz web LuCI de <strong>OpenWRT</strong> que nos permite configurar y arrancar <strong>vpnc</strong> en nuestro enrutador.</p>
+									<p><strong>Proyecto.</strong> Módulo para el interfaz web LuCI de <strong>OpenWRT</strong> que nos permite configurar y arrancar <strong>vpnc</strong> en nuestro enrutador.</p>
 									<p><small>27-Mayo-2013</small></p>
 								</article>
 							</div>
@@ -77,7 +77,7 @@
 								<article class="box box-style2">
 									<a href="http://wip.micronautas.com/openwrt-vpnc/" class="image image-full"><img src="images/openwrt-vpnc.png" alt="" /></a>
 									<h3><a href="http://wip.micronautas.com/openwrt-vpnc/">OpenWRT + VPNC</a></h3>
-									<p>Cómo configurar nuestro router con <strong>OpenWRT</strong> para que arranque automáticamente un túnel Cisco IPSEC (vpnc).</p>
+									<p><strong>Artículo.</strong> Cómo configurar nuestro router con <strong>OpenWRT</strong> para que arranque automáticamente un túnel Cisco IPSEC (vpnc).</p>
 									<p><small>27-Mayo-2013</small></p>
 								</article>
 							</div>
@@ -85,7 +85,7 @@
 								<article class="box box-style2">
 									<a href="http://wip.micronautas.com/instalar-openwrt/" class="image image-full"><img src="images/instalar-openwrt.png" alt="" /></a>
 									<h3><a href="http://wip.micronautas.com/instalar-openwrt/">Instalar OpenWRT</a></h3>
-									<p>Primeros pasos para instalar en nuestro router la distribución orientada a equipos de telecomunicaciones <strong>OpenWRT</strong>.</p>
+									<p><strong>Artículo.</strong> Primeros pasos para instalar en nuestro router la distribución orientada a equipos de telecomunicaciones <strong>OpenWRT</strong>.</p>
 									<p><small>27-Mayo-2013</small></p>
 								</article>
 							</div>
