--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						</div>
 						<div class="8u">
 							<header>
-								<h1><strong>tombatossals</strong></h1>
+								<h1><strong>Work In Progress</strong></h1>
 							</header>
 							<p style="margin-bottom: 1em;">Esta página recopila parte del trabajo realizado cuando tengo algo de tiempo libre, siempre relacionado con temáticas de tecnología, conocimiento abierto o telecomunicaciones.</p>
 							<a href="#work" class="button button-big">Últimas publicaciones</a>
