--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<article class="container" id="top">
 					<div class="row">
 						<div class="4u">
-							<span class="me image image-full" style="box-shadow: 0 0 10px 10px #555;"><img src="images/bee.png" alt="" /></span>
+							<span class="me image image-full" style="box-shadow: 10px 10px 10px #555;"><img src="images/bee.png" alt="" /></span>
 						</div>
 						<div class="8u">
 							<header>
