--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
 							</div>
 							<div class="4u">
 								<article class="box box-style2">
-									<a href="http://wip.micronautas.com/openwrt-vpnc/" class="image image-full"><img src="images/openwrt-vpnc.png" alt="" /></a>
-									<h3><a href="http://wip.micronautas.com/openwrt-vpnc/">OpenWRT + VPNC</a></h3>
+									<a href="http://tombatossals.github.io/openwrt-vpnc/" class="image image-full"><img src="images/openwrt-vpnc.png" alt="" /></a>
+									<h3><a href="http://tombatossals.github.io/openwrt-vpnc/">OpenWRT + VPNC</a></h3>
 									<p><strong>Artículo.</strong> Cómo configurar nuestro router con <strong>OpenWRT</strong> para que arranque automáticamente un túnel Cisco IPSEC (vpnc).</p>
 									<p><small>27-Mayo-2013</small></p>
 								</article>
 							</div>
 							<div class="4u">
 								<article class="box box-style2">
-									<a href="http://wip.micronautas.com/instalar-openwrt/" class="image image-full"><img src="images/instalar-openwrt.png" alt="" /></a>
-									<h3><a href="http://wip.micronautas.com/instalar-openwrt/">Instalar OpenWRT</a></h3>
+									<a href="http://tombatossals.github.io/instalar-openwrt/" class="image image-full"><img src="images/instalar-openwrt.png" alt="" /></a>
+									<h3><a href="http://tombatossals.github.io/instalar-openwrt/">Instalar OpenWRT</a></h3>
 									<p><strong>Artículo.</strong> Primeros pasos para instalar en nuestro router la distribución orientada a equipos de telecomunicaciones <strong>OpenWRT</strong>.</p>
 									<p><small>27-Mayo-2013</small></p>
 								</article>
